# rhosts

./: .gitignore  CMakeLists.txt  Makefile  README.md  Readme.md
src/: download.c  download.h  go.mod  removeadhosts.path  removeadhosts.service  removeadhosts.sh  removeadhosts.timer  rhosts.c  rhosts.go  rhosts.h  rhostsConfig.h.in  rhosts_default.cfg
src/cfg/: cfg.go  linux.go  windows.go
src/hosts/: hosts.go
src/serve/: serve.go
src/serve/certutils/: certutils.go  certutils_test.go
src/sys/: linux.go  sys.go  windows.go
src/systemd/: rhosts.path  rhosts.service
